--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                             </div>
                             <div class="title-section">
                                 <sl-tooltip hoist style="--max-width: 30ch;" placement="top-start" content="This documentation site was created using TileDocs, a fast and user-friendly editor for building and hosting documentation projects.">
-                                    <span>Made with TileDocs</span>
+                                    <span></span>
                                 <sl-tooltip>
                             </div>
                         </div>
